--- a/config/_default/config.yaml
+++ b/config/_default/config.yaml
@@ -4,7 +4,8 @@
 # This file is formatted using YAML syntax - learn more at https://learnxinyminutes.com/docs/yaml/
 
 title: Academic # Website name
-baseURL: 'https://example.com/' # Website URL
+baseURL: 'https://shinya7y.github.io/starter-hugo-academic/' # Website URL
+canonifyurls: true
 
 ############################
 ## LANGUAGE
