--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -20,7 +20,8 @@ jobs:
       - name: Setup Hugo
         uses: peaceiris/actions-hugo@v2
         with:
-          hugo-version: '0.104.3'
+          # hugo-version: '0.104.3'
+          hugo-version: '0.100.2'  # to avoid https://github.com/google/docsy/issues/1114
           extended: true  # for academic theme
 
       - name: Build
