--- a/config/_default/config.yaml
+++ b/config/_default/config.yaml
@@ -4,7 +4,7 @@
 # This file is formatted using YAML syntax - learn more at https://learnxinyminutes.com/docs/yaml/
 
 # TODO change website name
-title: Academic
+title: 'Sample Page'
 # TODO change baseURL
 # e.g., GitHub user site https://<username>.github.io/
 # or GitHub project site https://<username>.github.io/<repository>/
